Add images, database, and showing people in table

--- a/HealthCatalyst/appsettings.json
+++ b/HealthCatalyst/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HealthCatalystContext": "Server=(localdb)\\mssqllocaldb;Database=HealthCatalystContext-a0b45fb1-a942-4c41-a643-54f9810d698f;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
